fix(avatar): fix avatar white spaces

--- a/packages/design/components/Avatar/style/index.less
+++ b/packages/design/components/Avatar/style/index.less
@@ -1,6 +1,7 @@
 .bgm-avatar {
   display: inline-block;
   box-sizing: border-box;
+  vertical-align: middle;
   border-radius: 6px;
   border: 1px solid #ede9e9;
 
